--- a/classicthesis/FrontBackmatter/Acknowledgments.tex
+++ b/classicthesis/FrontBackmatter/Acknowledgments.tex
@@ -20,28 +20,25 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-Put your acknowledgments here.
-
-Many thanks to everybody who already sent me a postcard!
-
-Regarding the typography and other help, many thanks go to Marco 
-Kuhlmann, Philipp Lehman, Lothar Schlesier, Jim Young, Lorenzo 
-Pantieri and Enrico Gregorio\footnote{Members of GuIT (Gruppo 
-Italiano Utilizzatori di \TeX\ e \LaTeX )}, J\"org Sommer, 
-Joachim K\"ostler, Daniel Gottschlag, Denis Aydin, Paride 
-Legovini, Steffen Prochnow, Nicolas Repp, Hinrich Harms, 
- Roland Winkler, Jörg Weber, Henri Menke, Claus Lahiri, 
- Clemens Niederberger, Stefano Bragaglia, Jörn Hees, 
- and the whole \LaTeX-community for support, ideas and 
- some great software.
+I would first like to thank my thesis advisor Andreas Simbürger of the Fakultät für Informatik at Passau Universität. He was always there to help me and provide me guidances whenever I needed it. 
+I also want to take Michael Krüse of Inria laboratory in Paris, my mentor during the Google Summer of Code who provide me very helpful support.
 
 \bigskip
 
-\noindent\emph{Regarding \mLyX}: The \mLyX\ port was intially done by 
-\emph{Nicholas Mariette} in March 2009 and continued by 
-\emph{Ivo Pletikosi\'c} in 2011. Thank you very much for your 
-work and for the contributions to the original style.
+I would also like to thank all my teachers since the beginning of my cursus who gave me the love of computer science.
 
+\bigskip
+
+Thank you to Laurence and all my friends who support me during this long effort.
+Thank you to all others students involved in the double diplom Insa Lyon - Universität Passau.
+
+\bigskip
+
+I also want to express my appreciation for my girlfriend Adeline who stuck with me during the long months of working with my computer. This accomplishment would not have been possible without you. 
+
+\bigskip
+
+Finalement, je voudrais exprimer ma plus profonde gratitude à mes parents, Murielle et Didier, à mes sœurs Séverine et Elisabeth, à mon beau-frère Marc et à toute ma famille pour leur soutien sans faille durant toute ma scolarité. Sans eux, rien n'aurait été possible. Merci beaucoup !
 
 \endgroup
 
