preqque page de titre

--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -15,19 +15,35 @@
             \color{Maroon}\spacedallcaps{\myTitle} \\ \bigskip
         \endgroup
 
-        \spacedlowsmallcaps{\myName}
+\vspace{3cm}
+
+        \includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \bigskip
+
+        \spacedlowsmallcaps{\myName} \medskip
+
+        \myUni \\ \vspace{2cm}
+        
+        Supervised by: \\ \medskip
+        
+        \begin{tabular}{*{2}{>{\centering}p{.5\textwidth}}}
+  		\spacedlowsmallcaps{Christian Lengauer} & \spacedlowsmallcaps{Lionel Brunie} \tabularnewline
+  		Universität Passau & Insa Lyon  \tabularnewline
+  		\url{email1} & \url{email2}
+ 		\end{tabular}\\[3em]
+         
+        \bigskip 
+        Tutored by: \\ \medskip
+        
+        \begin{tabular}{*{2}{>{\centering}p{.5\textwidth}}}
+  		\spacedlowsmallcaps{Andreas Simbürger} & \spacedlowsmallcaps{Michael Krüse} \tabularnewline
+  		Universität Passau & Inria Paris  \tabularnewline
+  		\url{email1} & \url{email2}
+ 		\end{tabular}\\[3em]
 
         \vfill
 
-        \includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \medskip
-
-        \mySubtitle \\ \medskip   
-        %\myDegree \\
-        %\myDepartment \\                            
-        %\myFaculty \\
-        %\myUni \\ \bigskip
-
-        \myTime\ -- \myVersion
+		A thesis submitted for the degree of \\
+		\textit{Master of computer science}.
 
         \vfill                      
 
