--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -40,19 +40,19 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{A Classic Thesis Style\xspace}
-\newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
+\newcommand{\myTitle}{Maximal static expansion for efficient loop parallelization on GPU \xspace}
+\newcommand{\mySubtitle}{\xspace}
 \newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
-\newcommand{\myName}{André Miede\xspace}
-\newcommand{\myProf}{Put name here\xspace}
-\newcommand{\myOtherProf}{Put name here\xspace}
-\newcommand{\mySupervisor}{Put name here\xspace}
+\newcommand{\myName}{Nicolas Bonfante\xspace}
+\newcommand{\myProf}{Christian Lengauer\xspace}
+\newcommand{\myOtherProf}{Lionel Brunie\xspace}
+\newcommand{\mySupervisor}{Andreas Simbürger\xspace}
 \newcommand{\myFaculty}{Put data here\xspace}
 \newcommand{\myDepartment}{Put data here\xspace}
-\newcommand{\myUni}{Put data here\xspace}
-\newcommand{\myLocation}{Saarbrücken\xspace}
-\newcommand{\myTime}{September 2015\xspace}
-\newcommand{\myVersion}{version 4.2\xspace}
+\newcommand{\myUni}{Insa Lyon - Universität Passau\xspace}
+\newcommand{\myLocation}{\xspace}
+\newcommand{\myTime}{\xspace}
+\newcommand{\myVersion}{\xspace}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
@@ -138,7 +138,7 @@
 % ****************************************************************************************************
 \usepackage{listings} 
 %\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % for special keywords
-\lstset{language=[LaTeX]Tex,%C++,
+\lstset{language=C++,
     morekeywords={PassOptionsToPackage,selectlanguage},
     keywordstyle=\color{RoyalBlue},%\bfseries,
     basicstyle=\small\ttfamily,
@@ -153,8 +153,12 @@
     breaklines=true,
     %frameround=ftff,
     %frame=single,
-    belowcaptionskip=.75\baselineskip
+    belowcaptionskip=.75\baselineskip ,
     %frame=L
+    keywordstyle=\color{blue},
+    stringstyle=\color{red},
+    commentstyle=\color{green},
+    morecomment=[l][\color{magenta}]{\#}
 } 
 % ****************************************************************************************************             
 
@@ -275,3 +279,4 @@
 %\usepackage[default,osfigures]{opensans} % scale=0.95 
 %\usepackage[sfdefault]{FiraSans}
 % ****************************************************************************************************
+
