--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -27,12 +27,18 @@
 %
 % **************************************************************************************************************
 \RequirePackage{fix-cm} % fix some latex issues see: http://texdoc.net/texmf-dist/doc/latex/base/fixltx2e.pdf
-\documentclass[ twoside,openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
+%\documentclass[ twoside,openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
+%                footinclude=true,cleardoublepage=empty,abstractoff, % <--- obsolete, remove (todo)
+%                BCOR=5mm,paper=a4,fontsize=11pt,%11pt,a4paper,%
+%                ngerman,american,%
+%                ]{scrreprt}
+
+\documentclass[ openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
                 footinclude=true,cleardoublepage=empty,abstractoff, % <--- obsolete, remove (todo)
                 BCOR=5mm,paper=a4,fontsize=11pt,%11pt,a4paper,%
                 ngerman,american,%
                 ]{scrreprt}
-
+                
 %********************************************************************
 % Note: Make all your adjustments in here
 %*******************************************************
