--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -36,7 +36,7 @@
 % listings floatperchapter subfig
 % ********************************************************************
 
-
+\newcommand{\todo}[1]{\textbf{\color{red} #1}}}
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
