--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -95,6 +95,9 @@
 %interlingua se que. Al via multo esser specimen, campo responder que
 %da. Le usate medical addresses pro, europa origine sanctificate nos se.}
 
+\part{Introduction}
+\include{Chapters/Intro}
+
 \part{Background}
 \include{Chapters/Parallelism}
 \include{Chapters/MSE}
