--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -280,3 +280,5 @@
 %\usepackage[sfdefault]{FiraSans}
 % ****************************************************************************************************
 
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}[section]
