--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -36,7 +36,7 @@
 % listings floatperchapter subfig
 % ********************************************************************
 
-\newcommand{\todo}[1]{\textbf{\color{red} #1}}}
+\newcommand{\todo}[1]{\textbf{\color{red} #1}}
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
@@ -280,5 +280,5 @@
 %\usepackage[sfdefault]{FiraSans}
 % ****************************************************************************************************
 
-\theoremstyle{definition}
+
 \newtheorem{definition}{Definition}[section]
