conclusion + parallelism done

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -116,6 +116,8 @@
 \cleardoublepage
 \part{Perspectives}
 
+\part{Conclusion}
+
 % ********************************************************************
 % Backmatter
 %*******************************************************
