--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,81 +1,26 @@
-% This file was created with JabRef 2.8.1.
-% Encoding: Cp1252
-
-@BOOK{bentley:1999,
-  title = {{P}rogramming {P}earls},
-  publisher = {Addison--Wesley},
-  year = {1999},
-  author = {Jon Bentley},
-  address = {Boston, MA, USA},
-  edition = {2nd}
+@article{Polly,
+author = {Grosser Tobias and Groesslinger Armin and Lengauer, Christian},
+title = {Polly — Performing polyhedral optimizations on a Low-Level Intermediate Representation},
+journal = {Parallel Processing Letters},
+volume = {22},
+number = {04},
+pages = {1250010},
+year = {2012},
+doi = {10.1142/S0129626412500107},
 }
 
-@BOOK{bringhurst:2002,
-  title = {{T}he {E}lements of {T}ypographic {S}tyle},
-  publisher = {Hartley \& Marks Publishers},
-  year = {2013},
-  author = {Robert Bringhurst},
-  series = {Version 4.0: 20th Anniversary Edition},
-  address = {Point Roberts, WA, USA}
-}
-
-@BOOK{cormen:2001,
-  title = {{I}ntroduction to {A}lgorithms},
-  publisher = {The MIT Press},
-  year = {2009},
-  author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L.
-	and Clifford Stein},
-  address = {Cambridge, MA, USA},
-  edition = {3rd}
-}
-
-@BOOK{dueck:trio,
-  title = {{D}ueck's {T}rilogie: {O}mnisophie -- {S}upramanie -- {T}opothesie},
-  publisher = {Springer, Berlin, Germany},
-  year = {2005},
-  author = {Gunter Dueck},
-  note = {\url{http://www.omnisophie.com}}
-}
-
-@ARTICLE{knuth:1976,
-  author = {Knuth, Donald E.},
-  title = {{B}ig {O}micron and {B}ig {O}mega and {B}ig {T}heta},
-  journal = {SIGACT News},
-  year = {1976},
-  volume = {8},
-  pages = {18--24},
-  number = {2},
-  address = {New York, NY, USA},
-  publisher = {ACM Press}
-}
-
-@ARTICLE{knuth:1974,
-  author = {Knuth, Donald E.},
-  title = {{C}omputer {P}rogramming as an {A}rt},
-  journal = {Communications of the ACM},
-  year = {1974},
-  volume = {17},
-  pages = {667--673},
-  number = {12},
-  address = {New York, NY, USA},
-  publisher = {ACM Press}
-}
-
-@BOOK{sommerville:1992,
-  title = {{S}oftware {E}ngineering},
-  publisher = {Addison-Wesley},
-  year = {2015},
-  author = {Ian Sommerville},
-  address = {Boston, MA, USA},
-  edition = {10th}
-}
-
-@BOOK{taleb:2012,
-  title = {{A}ntifragile: {T}hings {T}hat {G}ain from {D}isorder ({I}ncerto
-	{B}ook 3)},
-  publisher = {Random House},
-  year = {2012},
-  author = {Nassim Nicholas Taleb},
-  address = {New York, NY, USA}
-}
+@inproceedings{LLVM,
+ author = {Lattner, Chris and Adve, Vikram},
+ title = {LLVM: A Compilation Framework for Lifelong Program Analysis \& Transformation},
+ booktitle = {Proceedings of the International Symposium on Code Generation and Optimization: Feedback-directed and Runtime Optimization},
+ series = {CGO '04},
+ year = {2004},
+ isbn = {0-7695-2102-9},
+ location = {Palo Alto, California},
+ pages = {75--},
+ url = {http://dl.acm.org/citation.cfm?id=977395.977673},
+ acmid = {977673},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
 
