--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -24,3 +24,37 @@ doi = {10.1142/S0129626412500107},
  address = {Washington, DC, USA},
 } 
 
+@inproceedings{PolyJit,
+ author = {A. Simbürger and A. Größliger},
+ title = {On the variety of static control parts in real-world programs: from affine via multi-dimensional to polynomial and just-in-time},
+ booktitle = {Proceedings of the 4th International Workshop on Polyhedral Compilation Techniques},
+ series = {CGO '04},
+ year = {2014},
+ url = {http://impact.gforge.inria.fr/impact2014/papers/impact2014-simbuerger.pdf},
+} 
+
+@article{PGO,
+author = {Luc Forget},
+title = {Profile based scop selection},
+year = {2017},
+}
+
+@Inbook{ISL,
+author="Verdoolaege, Sven",
+editor="Fukuda, Komei
+and Hoeven, Joris van der
+and Joswig, Michael
+and Takayama, Nobuki",
+title="isl: An Integer Set Library for the Polyhedral Model",
+bookTitle="Mathematical Software -- ICMS 2010: Third International Congress on Mathematical Software, Kobe, Japan, September 13-17, 2010. Proceedings",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="299--302",
+abstract="In compiler research, polytopes and related mathematical objects have been successfully used for several decades to represent and manipulate computer programs in an approach that has become known as the polyhedral model. The key insight is that the kernels of many compute-intensive applications are composed of loops with bounds that are affine combinations of symbolic constants and outer loop iterators. The iterations of a loop nest can then be represented as the integer points in a (parametric) polytope and manipulated as a whole, rather than as individual iterations. A similar reasoning holds for the elements of an array and for mappings between loop iterations and array elements.",
+isbn="978-3-642-15582-6",
+doi="10.1007/978-3-642-15582-6_49",
+url="https://doi.org/10.1007/978-3-642-15582-6_49"
+}
+
+
