--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -106,15 +106,18 @@
 \include{Chapters/Polly}
 
 \part{Implementation}
+Now that the reader has all the necessary information to be able to understand the basis, this part will present the work done during this thesis. The first step was to implement a mechanism to allocate new arrays on heap because expansion needs a lot of memory space. The second step was to implement a fully-indexed expansion.
+
 \include{Chapters/HeapAlloc}
 \include{Chapters/FIE}
-\include{Chapters/MSE_Imp}
 
 \cleardoublepage
 \part{Evaluation}
 
 \cleardoublepage
 \part{Perspectives}
+\include{Chapters/CopyInOut}
+\include{Chapters/MSE_Imp}
 
 \part{Conclusion}
 
