--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -57,4 +57,25 @@ doi="10.1007/978-3-642-15582-6_49",
 url="https://doi.org/10.1007/978-3-642-15582-6_49"
 }
 
+@article{MSE,
+ author = {Barthou, Denis and Cohen, Albert and Collard, Jean-Fran\c{c}ois},
+ title = {Maximal Static Expansion},
+ journal = {Int. J. Parallel Program.},
+ issue_date = {June 2000},
+ volume = {28},
+ number = {3},
+ month = jun,
+ year = {2000},
+ issn = {0885-7458},
+ pages = {213--243},
+ numpages = {31},
+ url = {http://dx.doi.org/10.1023/A:1007500431910},
+ doi = {10.1023/A:1007500431910},
+ acmid = {348534},
+ publisher = {Kluwer Academic Publishers},
+ address = {Norwell, MA, USA},
+ keywords = {array expansion, automatic parallelization, reaching definition analysis},
+} 
+
+[download] 
 
