--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -3,7 +3,7 @@
 %*******************************************************
 \begin{titlepage}
     % if you want the titlepage to be centered, uncomment and fine-tune the line below (KOMA classes environment)
-    \begin{addmargin}[-1cm]{-3cm}
+    %\begin{addmargin}[-1cm]{-3cm}
     \begin{center}
         \large  
 
@@ -26,7 +26,7 @@
         Supervised by: \\ \medskip
         
         \begin{tabular}{*{2}{>{\centering}p{.5\textwidth}}}
-  		\spacedlowsmallcaps{Christian Lengauer} & \spacedlowsmallcaps{Lionel Brunie} \tabularnewline
+  		\spacedlowsmallcaps{Harald Kosch} & \spacedlowsmallcaps{Lionel Brunie} \tabularnewline
   		Universität Passau & Insa Lyon  \tabularnewline
   		\url{email1} & \url{email2}
  		\end{tabular}\\[3em]
@@ -48,5 +48,5 @@
         \vfill                      
 
     \end{center}  
-  \end{addmargin}       
+  %\end{addmargin}       
 \end{titlepage}   
