--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -26,17 +26,17 @@
 % Boston, MA 02111-1307, USA.
 %
 % **************************************************************************************************************
-\RequirePackage{fix-cm} % fix some latex issues see: http://texdoc.net/texmf-dist/doc/latex/base/fixltx2e.pdf
+%\RequirePackage{fix-cm} % fix some latex issues see: http://texdoc.net/texmf-dist/doc/latex/base/fixltx2e.pdf
 %\documentclass[ twoside,openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
 %                footinclude=true,cleardoublepage=empty,abstractoff, % <--- obsolete, remove (todo)
 %                BCOR=5mm,paper=a4,fontsize=11pt,%11pt,a4paper,%
 %                ngerman,american,%
 %                ]{scrreprt}
 
-\documentclass[ openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
+\documentclass[  openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
                 footinclude=true,cleardoublepage=empty,abstractoff, % <--- obsolete, remove (todo)
                 BCOR=5mm,paper=a4,fontsize=11pt,%11pt,a4paper,%
-                ngerman,american,%
+                english,%
                 ]{scrreprt}
                 
 %********************************************************************
@@ -48,7 +48,7 @@
 % Bibliographies
 %*******************************************************
 \addbibresource{Bibliography.bib}
-\addbibresource[label=ownpubs]{AMiede_Publications.bib}
+%\addbibresource[label=ownpubs]{AMiede_Publications.bib}
 
 %********************************************************************
 % Hyphenation
