--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -113,13 +113,14 @@ Now that the reader has all the necessary information to be able to understand t
 
 \cleardoublepage
 \part{Evaluation}
-
+\include{Chapters/Evaluation}
 \cleardoublepage
 \part{Perspectives}
 \include{Chapters/CopyInOut}
 \include{Chapters/MSE_Imp}
 
 \part{Conclusion}
+\include{Chapters/Conclusion}
 
 % ********************************************************************
 % Backmatter
