--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -141,5 +141,6 @@ Now that the reader has all the necessary information to be able to understand t
 % ********************************************************************
 % Game Over: Restore, Restart, or Quit?
 %*******************************************************
+\ac{DRY}
 \end{document}
 % ********************************************************************
