--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -17,18 +17,21 @@
 
 \vspace{3cm}
 
-        \includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \bigskip
-
-        \spacedlowsmallcaps{\myName} \medskip
-
-        \myUni \\ \vspace{2cm}
+        %\includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \bigskip
+		\vfill
+		
+		Thesis by: \\ \medskip
+        \begin{tabular}{*{1}{>{\centering}p{.7\textwidth}}}
+  		\spacedlowsmallcaps{\myName} \tabularnewline
+  		\myUni \tabularnewline
+  		\small \url{nicolas.bonfante@insa-lyon.fr}
+ 		\end{tabular}\\[3em]
         
         Supervised by: \\ \medskip
-        
         \begin{tabular}{*{2}{>{\centering}p{.5\textwidth}}}
   		\spacedlowsmallcaps{Harald Kosch} & \spacedlowsmallcaps{Lionel Brunie} \tabularnewline
   		Universität Passau & Insa Lyon  \tabularnewline
-  		\url{email1} & \url{email2}
+  		\small \url{harald.kosch@uni-passau.de} & \small \url{lionel.brunie@insa-lyon.fr}
  		\end{tabular}\\[3em]
          
         \bigskip 
@@ -37,7 +40,7 @@
         \begin{tabular}{*{2}{>{\centering}p{.5\textwidth}}}
   		\spacedlowsmallcaps{Andreas Simbürger} & \spacedlowsmallcaps{Michael Krüse} \tabularnewline
   		Universität Passau & Inria Paris  \tabularnewline
-  		\url{email1} & \url{email2}
+  		\small \url{andreas.simbuerger@uni-passau.de} & \small \url{michael.kruse@inria.fr}
  		\end{tabular}\\[3em]
 
         \vfill
