--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -9,19 +9,13 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-Short summary of the contents in English\dots a great guide by 
-Kent Beck how to write good abstracts can be found here:  
+Nowadays, there are more and more differents architectures and it is more and more difficult to take advantages of the power of parallelism. The problem come from the fact that it is time-consuming to write parallel code by hand and writing sequential code create dependencies that make parallelism impossible. One solution is to allow compilers to detect and remove these dependencies to be able to execute code in parallel without any action from the programers. Maximal static expansion is a method to get rid of unnecessary dependencies. The aim of this report is to describe the implementation of static expansion in Polly, an extension to LLVM.
+
 \begin{center}
 \url{https://plg.uwaterloo.ca/~migod/research/beckOOPSLA.html}
 \end{center}
 
 \vfill
-
-\begin{otherlanguage}{ngerman}
-\pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
-\chapter*{Zusammenfassung}
-Kurze Zusammenfassung des Inhaltes in deutscher Sprache\dots 
-\end{otherlanguage}
 
 \endgroup			
 
