--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -95,7 +95,7 @@
 %interlingua se que. Al via multo esser specimen, campo responder que
 %da. Le usate medical addresses pro, europa origine sanctificate nos se.}
 
-\part{Introduction}
+%\part{Introduction}
 \include{Chapters/Intro}
 
 \part{Background}
@@ -119,7 +119,7 @@ Now that the reader has all the necessary information to be able to understand t
 \include{Chapters/CopyInOut}
 \include{Chapters/MSE_Imp}
 
-\part{Conclusion}
+%\part{Conclusion}
 \include{Chapters/Conclusion}
 
 % ********************************************************************
