--- a/todo
+++ b/todo
@@ -1,9 +1,14 @@
 Refaire les acronymes
 Voir pourquoi les listing s'affiche pas dans le table de listing
-Faire l'abstract
-Faire la conclusion
-Faire MSE background
-Faire FIE impl
-Faire eval future
-Faire copy in out
-Faire MSE impl
+
+2. Faire la conclusion
+
+5. Faire MSE background
+   Faire MSE impl
+
+1. Faire FIE impl
+
+4. Faire eval future
+
+3. Faire copy in out
+
