--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -36,24 +36,24 @@
     % List of Tables
     %*******************************************************
     %\phantomsection 
-    \refstepcounter{dummy}
+    %\refstepcounter{dummy}
     %\addcontentsline{toc}{chapter}{\listtablename}
-    \pdfbookmark[1]{\listtablename}{lot}
-    \listoftables
+    %\pdfbookmark[1]{\listtablename}{lot}
+    %\listoftables
         
-    \vspace{8ex}
+    %\vspace{8ex}
 %   \newpage
     
     %*******************************************************
     % List of Listings
     %*******************************************************      
       %\phantomsection 
-    \refstepcounter{dummy}
+    %\refstepcounter{dummy}
     %\addcontentsline{toc}{chapter}{\lstlistlistingname}
-    \pdfbookmark[1]{\lstlistlistingname}{lol}
-    \lstlistoflistings 
+    %\pdfbookmark[1]{\lstlistlistingname}{lol}
+    %\lstlistoflistings 
 
-    \vspace{8ex}
+    %\vspace{8ex}
        
     %*******************************************************
     % Acronyms
