--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -64,6 +64,21 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
-        \acro{DRY}{ccc}
+        \acro{GPU}{Graphics Processing Unit}
+        \acro{CPU}{Central Processing Unit}
+        \acro{LLVM}{Low Level Virtual Machine}
+        \acro{ISL}{Integer Set Library}
+        \acro{LLVM-IR}{Intermediate Representation}
+        \acro{MSE}{Maximal Static Expansion}
+        \acro{SIMD}{Single Instruction Multiple Data}
+        \acro{MPI}{Message Passing Interface}
+        \acro{ASIC}{Application Specific Integrated Circuit}
+        \acro{FPGA}{Field Programmable Gate Array}
+        \acro{RAW}{Read After Write}
+        \acro{WAR}{Write After Read}
+        \acro{RAR}{Read After Read}
+        \acro{WAW}{Write After Write}
+        \acro{JIT}{Just In Time}
+        \acro{SCOP}{Static Control Part}
     \end{acronym}                     
 \endgroup
