--- a/FrontBackmatter/Titleback.tex
+++ b/FrontBackmatter/Titleback.tex
@@ -1,10 +1,28 @@
 \thispagestyle{empty}
 
 \hfill
+\vfill 
+
+
+\begin{center}
+\textbf{Erklärung zur Masterarbeit}
+
+Ich erkläre hiermit, dass ich die vorliegende Arbeit selbständig verfasst und keine
+anderen als die angegebenen Quellen und Hilfsmittel verwendet habe. Die Arbeit wurde
+bisher keiner anderen Prüfungsbehörde vorgelegt und auch noch nicht veröffentlicht. 
+
+\vspace{1cm}
+\textbf{Declaration of Authorship}
+
+I hereby declare that the thesis submitted is my own unaided work. All direct or indirect
+sources used are acknowledged as references. This paper was not previously presented to
+another examination board and has not been published.
+\end{center}
+\vspace{2cm}
 
 \vfill
 
-\noindent\myName: \textit{\myTitle} \textcopyright\
+\noindent\myName: \textit{\myTitle}, \today \textcopyright\
 
 %\bigskip
 %
