--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -9,6 +9,20 @@ year = {2012},
 doi = {10.1142/S0129626412500107},
 }
 
+@article{Benchbuild,
+  title={BenchBuild: A Large-Scale Empirical-Research Toolkit},
+  author={Simb{\"u}rger, Andreas and Sattler, Floarian and Gr{\"o}{\ss}linger, Armin and Lengauer, Christian},
+  year={2016},
+  url={http://www.fim.uni-passau.de/fileadmin/files/forschung/mip-berichte/MIP-1602.pdf}
+}
+
+@article{Polybench,
+  title={Polybench: The polyhedral benchmark suite (2011)},
+  author={Pouchet, Louis-Noel},
+  url={http://www-roc.inria.fr/~pouchet/software/polybench},
+  year={2015}
+}
+
 @inproceedings{LLVM,
  author = {Lattner, Chris and Adve, Vikram},
  title = {LLVM: A Compilation Framework for Lifelong Program Analysis \& Transformation},
@@ -66,15 +80,7 @@ url="https://doi.org/10.1007/978-3-642-15582-6_49"
  number = {3},
  month = jun,
  year = {2000},
- issn = {0885-7458},
- pages = {213--243},
- numpages = {31},
- url = {http://dx.doi.org/10.1023/A:1007500431910},
- doi = {10.1023/A:1007500431910},
- acmid = {348534},
- publisher = {Kluwer Academic Publishers},
- address = {Norwell, MA, USA},
- keywords = {array expansion, automatic parallelization, reaching definition analysis},
+ url = {https://hal.archives-ouvertes.fr/hal-01257314/document},
 } 
 
 [download] 
