--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -80,5 +80,6 @@
         \acro{WAW}{Write After Write}
         \acro{JIT}{Just In Time}
         \acro{SCOP}{Static Control Part}
+        \acro{FIE}{Fully Indexed Expansion}
     \end{acronym}                     
 \endgroup
