--- a/FrontBackmatter/Titleback.tex
+++ b/FrontBackmatter/Titleback.tex
@@ -17,8 +17,13 @@ bisher keiner anderen Prüfungsbehörde vorgelegt und auch noch nicht veröffent
 I hereby declare that the thesis submitted is my own unaided work. All direct or indirect
 sources used are acknowledged as references. This paper was not previously presented to
 another examination board and has not been published.
+
+\vspace{1cm}
+\textbf{Declaration de paternité}
+
+Je déclare par la présente que la thèse soumise est le fruit de mon propre travail. Toutes les sources directes ou indirectes utilisées sont citées comme références. Ce document n'a pas été présenté précédemment à un autre comité d'examen et n'a pas été publié.
+\vspace{1cm}
 \end{center}
-\vspace{2cm}
 
 \vfill
 
