--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -9,16 +9,16 @@
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
 I would first like to thank my thesis advisor Andreas Simbürger of the Fakultät für Informatik at Passau Universität. He was always there to help me and provide me guidances whenever I needed it. 
-I also want to take Michael Krüse of Inria laboratory in Paris, my mentor during the Google Summer of Code who provide me very helpful support.
+I also want to thank Michael Krüse of Inria laboratory in Paris, my mentor during the Google Summer of Code who provide me very helpful support.
 
 \bigskip
 
-I would also like to thank all my teachers since the beginning of my cursus who gave me the love of computer science.
+I would also like to thank all my teachers since the beginning of my cursus who gave me the love of computer science. Thank you to Morwenna Joubin who help us at the university of Passau. 
 
 \bigskip
 
 Thank you to Laurence and all my friends who support me during this long effort.
-Thank you to all others students involved in the double diplom Insa Lyon - Universität Passau.
+Thank you to all others students involved in the double diplom Insa Lyon - Universität Passau : Luc, Paul, Killian, Guillaume, Mathieu, Max, Thomas.
 
 \bigskip
 
